--- a/ornv-transmission.tex
+++ b/ornv-transmission.tex
@@ -10,6 +10,17 @@
 \author{James Grasela and Aubrey Moore}
 \maketitle
 
+\begin{scriptsize}
+\begin{verbatim}
+@misc{grasela_guam_2020,
+  title = {Guam {{CRB Biocontrol Project Technical Report}}: {{OrNV Transmission Experiment}}},
+  author = {Grasela, James and Moore, Aubrey},
+  date = {2020},
+  url = {https://github.com/aubreymoore/OrNV-Transmission/blob/master/ornv-transmission.pdf}
+}
+\end{verbatim}
+\end{scriptsize}
+
 \begin{abstract}
 This experiment was performed to determine if OrNV isolate V23B can be transmitted from a dosed CRB adult to an undosed CRB 
 adult.
@@ -21,7 +32,7 @@ adult.
 
 \subsection{Virus}
 
-Beetles were dosed per os with ca. 30 μl V23B virus preparation of unknown concentration (AgResearch, New Zealand).
+Beetles were dosed per os with ca. 30 microlitre V23B virus preparation of unknown concentration (AgResearch, New Zealand).
 
 \subsection{Experimental design}
 
@@ -68,8 +79,6 @@ bioassay, the beetle pairs were randomly placed in 3 treatment groups of 15 jars
 \caption{Caption}
 \label{fig:tf}
 \end{figure}
-
-\section{BibTex}
 
 \end{document}
 
