refactored tex integration

--- a/ornv-transmission.tex
+++ b/ornv-transmission.tex
@@ -1,14 +1,17 @@
-
-
 \documentclass[11pt,letterpaper]{scrartcl}
 \usepackage{graphicx}
 \usepackage{booktabs}
 
 \begin{document}
-
+\titlehead{\centering Guam Coconut Rhinoceros Beetle Biocontrol Project Technical Report}
 \title{OrNV Transmission Experiment}
 \author{James Grasela and Aubrey Moore}
 \maketitle
+
+\begin{abstract}
+	This experiment was performed to determine if OrNV isolate V23B can be transmitted from a dosed CRB adult to an undosed CRB 
+	adult.
+\end{abstract}
 
 \begin{scriptsize}
 \begin{verbatim}
@@ -21,10 +24,7 @@
 \end{verbatim}
 \end{scriptsize}
 
-\begin{abstract}
-This experiment was performed to determine if OrNV isolate V23B can be transmitted from a dosed CRB adult to an undosed CRB 
-adult.
-\end{abstract}
+\newpage
 
 \section{Materials and Methods}
 
