--- a/ornv-transmission.tex
+++ b/ornv-transmission.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,letterpaper]{scrartcl}
 \usepackage{graphicx}
 \usepackage{booktabs}
+\usepackage{verbatim}
 
 \begin{document}
 \titlehead{\centering Guam Coconut Rhinoceros Beetle Biocontrol Project Technical Report}
@@ -92,6 +93,23 @@ Results from this experiment are inconclusive because ofh high control mortality
 \caption{Mortality of beetles in jars where the male was dosed with virus. Points indicate time of death, in days after treatment, for dosed (red points) and undosed beetles (green points).}
 \label{fig:tm}
 \end{figure}
+
+\clearpage
+\appendix
+
+\section{Data file: ornv-transmission-1.csv}
+
+\begin{tiny}
+\verbatiminput{ornv-transmission-1.csv}
+\end{tiny}
+
+\clearpage
+
+\section{Post-mortem images}
+
+\input{pm-images}
+
+\clearpage
 
 \end{document}
 
